# discord-llm-bot

./: .gitignore  MIGRATION_SUMMARY.md  README.md  main.py  pyproject.toml  test_migration.py
config/: default.yaml  dev.yaml
discord-llm-bot/: __main__.py  client.py  config.py
discord-llm-bot/lib/: cloudflare.py
discord_llm_bot/: __main__.py  client.py  config.py  models.py
discord_llm_bot/lib/: agent.py  cloudflare.py  pydantic_ai_service.py  utils.py
